--- a/pom.xml
+++ b/pom.xml
@@ -711,6 +711,7 @@
                             </Specification-Version>
                         </manifestEntries>
                     </archive>
+                    <packagingExcludes>WEB-INF/lib/tomcat-embed-*.jar</packagingExcludes>
                     <webResources>
                         <resource>
                             <directory>src/main/webapp/WEB-INF/</directory>
