--- a/pom.xml
+++ b/pom.xml
@@ -503,7 +503,7 @@
         <dependency>
             <groupId>org.roaringbitmap</groupId>
             <artifactId>RoaringBitmap</artifactId>
-            <version>0.6.20</version>
+            <version>0.6.21</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -574,6 +574,11 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
             <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jdt.core.compiler</groupId>
+            <artifactId>ecj</artifactId>
+            <version>4.5.1</version>
         </dependency>
     </dependencies>
     <properties>
