Add ecj in shade plugin

--- a/pom.xml
+++ b/pom.xml
@@ -684,7 +684,8 @@
                                     <include>org.apache.tomcat.embed:*</include>
                                     <include>commons-io:commons-io</include>
                                     <include>org.apache.commons:commons-lang3</include>
-                                    <incudes>com.github.jankroken:commandline</incudes>
+                                    <include>com.github.jankroken:commandline</include>
+                                    <include>org.eclipse.jdt.core.compiler:ecj</include>
                                 </includes>
                             </artifactSet>
                             <transformers>
