--- a/build.xml
+++ b/build.xml
@@ -24,167 +24,172 @@
 -->
 <project name="OpenSearchServer" default="dist" basedir=".">
 
-	<property environment="env" />
-	<property name="dist" location="dist" />
-	<property name="licenses" location="licenses" />
-	<property name="shelldir" location="shell" />
-	<property name="product" value="opensearchserver" />
-	<property name="oss_testing_instance" value="http://localhost:9090" />
-	<property name="temp" location="temp" />
+    <property environment="env"/>
+    <property name="dist" location="dist"/>
+    <property name="licenses" location="licenses"/>
+    <property name="shelldir" location="shell"/>
+    <property name="product" value="opensearchserver"/>
+    <property name="oss_testing_instance" value="http://localhost:9090"/>
+    <property name="temp" location="temp"/>
 
-	<!-- Read the short hash from GIT -->
-	<exec executable="git" outputproperty="git.revision">
-		<arg value="rev-list" />
-		<arg value="--abbrev-commit" />
-		<arg value="--no-merges" />
-		<arg value="-n" />
-		<arg value="1" />
-		<arg value="HEAD" />
-	</exec>
+    <!-- Read the short hash from GIT -->
+    <exec executable="git" outputproperty="git.revision">
+        <arg value="rev-list"/>
+        <arg value="--abbrev-commit"/>
+        <arg value="--no-merges"/>
+        <arg value="-n"/>
+        <arg value="1"/>
+        <arg value="HEAD"/>
+    </exec>
 
-	<!-- Read the manifest from the WAR -->
-	<loadproperties>
-		<zipentry name="META-INF/MANIFEST.MF">
-			<first>
-				<fileset dir="target" includes="**/opensearchserver-*.war" />
-			</first>
-		</zipentry>
-	</loadproperties>
+    <!-- Read the manifest from the WAR -->
+    <loadproperties>
+        <zipentry name="META-INF/MANIFEST.MF">
+            <first>
+                <fileset dir="target" includes="**/opensearchserver-*.war"/>
+            </first>
+        </zipentry>
+    </loadproperties>
 
-	<property name="productsrc" value="${product}-${Implementation-Version}" />
-	<property name="productsrcrpm" value="${product}-${Specification-Version}-1" />
-	<property name="productdest" value="${product}-${Implementation-Version}-${git.revision}" />
+    <property name="productsrc" value="${product}-${Implementation-Version}"/>
+    <property name="productsrcrpm" value="${product}-${Specification-Version}-1"/>
+    <property name="productdest" value="${product}-${Implementation-Version}-${git.revision}"/>
 
-	<!-- Start OpenSearchServer using the embedded Tomcat -->
-	<target name="start" description="Starts OpenSearchServer">
-		<mkdir dir="${temp}" />
-		<mkdir dir="${temp}/data" />
-		<java fork="true" jar="target/${productsrc}.jar" dir="${temp}" spawn="true">
-			<env key="OPENSEARCHSERVER_DATA" value="${temp}/data" />
-			<arg line="-httpPort 9090 -uriEncoding UTF-8" />
-		</java>
-		<waitfor maxwait="120" maxwaitunit="second" checkevery="2" checkeveryunit="second">
-			<http url="${oss_testing_instance}" />
-		</waitfor>
-	</target>
+    <!-- Start OpenSearchServer using the embedded Tomcat -->
+    <target name="start" description="Starts OpenSearchServer">
+        <mkdir dir="${temp}"/>
+        <mkdir dir="${temp}/data"/>
+        <java fork="true" jar="target/${productsrc}.jar" dir="${temp}" spawn="true">
+            <env key="OPENSEARCHSERVER_DATA" value="${temp}/data"/>
+            <arg line="-httpPort 9090 -uriEncoding UTF-8"/>
+        </java>
+        <waitfor maxwait="120" maxwaitunit="second" checkevery="2" checkeveryunit="second">
+            <http url="${oss_testing_instance}"/>
+        </waitfor>
+    </target>
 
-	<!-- Stop any running OpenSearchServer -->
-	<target name="stop" description="Stop any running embedded Tomcat">
-		<exec executable="${env.JAVA_HOME}/bin/jps" output="${temp}/jps.out" />
-		<loadfile srcfile="${temp}/jps.out" property="oss_pid">
-			<filterchain>
-				<linecontainsregexp>
-					<regexp pattern="[0-9]+ ${productsrc}.jar" />
-				</linecontainsregexp>
-				<replaceregex pattern="([0-9]+) ${productsrc}.jar" replace="\1" />
-				<prefixlines prefix=" " />
-				<striplinebreaks />
-				<trim />
-			</filterchain>
-		</loadfile>
+    <!-- Stop any running OpenSearchServer -->
+    <target name="stop" description="Stop any running embedded Tomcat">
+        <exec executable="${env.JAVA_HOME}/bin/jps" output="${temp}/jps.out"/>
+        <loadfile srcfile="${temp}/jps.out" property="oss_pid">
+            <filterchain>
+                <linecontainsregexp>
+                    <regexp pattern="[0-9]+ ${productsrc}.jar"/>
+                </linecontainsregexp>
+                <replaceregex pattern="([0-9]+) ${productsrc}.jar" replace="\1"/>
+                <prefixlines prefix=" "/>
+                <striplinebreaks/>
+                <trim/>
+            </filterchain>
+        </loadfile>
 
-		<fail message="No PID found">
-			<condition>
-				<not>
-					<isset property="oss_pid" />
-				</not>
-			</condition>
-		</fail>
+        <fail message="No PID found">
+            <condition>
+                <not>
+                    <isset property="oss_pid"/>
+                </not>
+            </condition>
+        </fail>
 
-		<exec executable="kill">
-			<arg line="${oss_pid}" />
-		</exec>
-	</target>
+        <exec executable="kill">
+            <arg line="${oss_pid}"/>
+        </exec>
+    </target>
 
-	<target name="dist">
+    <target name="dist">
 
-		<mkdir dir="${dist}/${product}" />
-		<mkdir dir="${dist}/${product}/data" />
-		<mkdir dir="${dist}/${product}/logs" />
-		<mkdir dir="${dist}/${product}/lib" />
+        <mkdir dir="${dist}/${product}"/>
+        <mkdir dir="${dist}/${product}/data"/>
+        <mkdir dir="${dist}/${product}/logs"/>
+        <mkdir dir="${dist}/${product}/lib"/>
 
-		<copy tofile="${dist}/${product}/${product}.jar">
-			<fileset file="target/${productsrc}.jar" />
-		</copy>
+        <copy tofile="${dist}/${product}/${product}.jar">
+            <fileset file="target/${productsrc}.jar"/>
+        </copy>
 
-		<copy tofile="${dist}/${product}/${product}.war">
-			<fileset file="target/${productsrc}.war" />
-		</copy>
-		
-		<copy tofile="${dist}/${productdest}.deb">
-			<fileset file="target/${productsrc}.deb" />
-		</copy>
+        <copy tofile="${dist}/${product}/${product}.war">
+            <fileset file="target/${productsrc}.war"/>
+        </copy>
 
-		<copy tofile="${dist}/${productdest}.rpm">
-			<fileset file="target/rpm/opensearchserver/RPMS/noarch/${productsrcrpm}.noarch.rpm" />
-		</copy>
+        <copy tofile="${dist}/${productdest}.deb">
+            <fileset file="target/${productsrc}.deb"/>
+        </copy>
 
-		<copy tofile="${dist}/${productdest}.war">
-			<fileset file="target/${productsrc}.war" />
-		</copy>
+        <copy tofile="${dist}/${productdest}.war">
+            <fileset file="target/${productsrc}.war"/>
+        </copy>
 
-		<copy todir="${dist}/${product}">
-			<fileset file="LICENSE.txt" />
-			<fileset file="NOTICE.txt" />
-			<fileset file="README.md" />
-			<fileset file="CHANGELOG.txt" />
-			<fileset dir="${shelldir}" />
-		</copy>
+        <copy todir="${dist}/${product}">
+            <fileset file="LICENSE.txt"/>
+            <fileset file="NOTICE.txt"/>
+            <fileset file="README.md"/>
+            <fileset file="CHANGELOG.txt"/>
+            <fileset dir="${shelldir}"/>
+        </copy>
 
-		<!-- Check executable file flag for batches -->
-		<chmod perm="ugo+x" type="file">
-			<fileset dir="${dist}/${product}">
-				<include name="**/*.sh" />
-				<include name="**/*.bat" />
-			</fileset>
-		</chmod>
+        <!-- Check executable file flag for batches -->
+        <chmod perm="ugo+x" type="file">
+            <fileset dir="${dist}/${product}">
+                <include name="**/*.sh"/>
+                <include name="**/*.bat"/>
+            </fileset>
+        </chmod>
 
-		<!-- Create the tar.gz archive -->
-		<tar longfile="gnu" compression="gzip" destfile="${dist}/${productdest}.tar.gz">
-			<tarfileset dir="${dist}/${product}" mode="755" prefix="${product}">
-				<include name="**/*.sh" />
-				<include name="**/*.bat" />
-			</tarfileset>
-			<tarfileset dir="${dist}/${product}" prefix="${product}">
-				<include name="**" />
-				<exclude name="**/*.sh" />
-				<exclude name="**/*.bat" />
-			</tarfileset>
-		</tar>
+        <!-- Create the tar.gz archive -->
+        <tar longfile="gnu" compression="gzip" destfile="${dist}/${productdest}.tar.gz">
+            <tarfileset dir="${dist}/${product}" filemode="755" prefix="${product}">
+                <include name="**/*.sh"/>
+                <include name="**/*.bat"/>
+            </tarfileset>
+            <tarfileset dir="${dist}/${product}" prefix="${product}">
+                <include name="**"/>
+                <exclude name="**/*.sh"/>
+                <exclude name="**/*.bat"/>
+            </tarfileset>
+        </tar>
 
-		<!-- Create the zip archive -->
-		<zip encoding="windows-1250" destfile="${dist}/${productdest}.zip">
-			<zipfileset dir="${dist}/${product}" filemode="755" prefix="${product}">
-				<include name="**/*.sh" />
-				<include name="**/*.bat" />
-			</zipfileset>
-			<zipfileset dir="${dist}/${product}" prefix="${product}">
-				<include name="**" />
-				<exclude name="**/*.sh" />
-				<exclude name="**/*.bat" />
-			</zipfileset>
-		</zip>
+        <!-- Create the zip archive -->
+        <zip encoding="windows-1250" destfile="${dist}/${productdest}.zip">
+            <zipfileset dir="${dist}/${product}" filemode="755" prefix="${product}">
+                <include name="**/*.sh"/>
+                <include name="**/*.bat"/>
+            </zipfileset>
+            <zipfileset dir="${dist}/${product}" prefix="${product}">
+                <include name="**"/>
+                <exclude name="**/*.sh"/>
+                <exclude name="**/*.bat"/>
+            </zipfileset>
+        </zip>
 
-		<!-- Copy Txt Files -->
-		<copy todir="${dist}">
-			<fileset file="README.md" />
-			<fileset file="CHANGELOG.txt" />
-		</copy>
+        <!-- Copy Txt Files -->
+        <copy todir="${dist}">
+            <fileset file="README.md"/>
+            <fileset file="CHANGELOG.txt"/>
+        </copy>
 
-		<!-- Clean the temporary product directory -->
-		<delete dir="${dist}/${product}" />
+        <!-- Clean the temporary product directory -->
+        <delete dir="${dist}/${product}"/>
 
-	</target>
+    </target>
 
-	<!-- The tarball -->
-	<target name="dist-src">
-		<mkdir dir="${dist}" />
-		<tar compression="gzip" destfile="${dist}/${productdest}.src.tar.gz" longfile="gnu" basedir="." excludes="temp/**, dist/**, ant-build/**, build/**, target/**, .git/**" />
-	</target>
+    <!-- The RPM -->
+    <target name="dist-rpm">
+        <mkdir dir="${dist}"/>
+        <copy tofile="${dist}/${productdest}.rpm">
+            <fileset file="target/rpm/opensearchserver/RPMS/noarch/${productsrcrpm}.noarch.rpm"/>
+        </copy>
+    </target>
 
-	<target name="clean" description="clean up">
-		<delete dir="${temp}" />
-		<delete dir="${dist}" />
-	</target>
+    <!-- The tarball -->
+    <target name="dist-src">
+        <mkdir dir="${dist}"/>
+        <tar compression="gzip" destfile="${dist}/${productdest}.src.tar.gz" longfile="gnu" basedir="."
+             excludes="temp/**, dist/**, ant-build/**, build/**, target/**, .git/**"/>
+    </target>
+
+    <target name="clean" description="clean up">
+        <delete dir="${temp}"/>
+        <delete dir="${dist}"/>
+    </target>
 
 </project>
