--- a/pom.xml
+++ b/pom.xml
@@ -729,168 +729,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>jdeb</artifactId>
-                <groupId>org.vafer</groupId>
-                <version>1.5</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jdeb</goal>
-                        </goals>
-                        <configuration>
-                            <deb>${project.build.directory}/${project.build.finalName}.deb</deb>
-                            <controlDir>${basedir}/src/deb/control</controlDir>
-                            <dataSet>
-                                <data>
-                                    <src>${project.build.directory}/${project.build.finalName}.jar</src>
-                                    <dst>opensearchserver.jar</dst>
-                                    <type>file</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/usr/share/opensearchserver</prefix>
-                                        <user>daemon</user>
-                                        <group>daemon</group>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${project.build.directory}/${project.build.finalName}.war</src>
-                                    <dst>opensearchserver.war</dst>
-                                    <type>file</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/usr/share/opensearchserver</prefix>
-                                        <user>daemon</user>
-                                        <group>daemon</group>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${basedir}/src/deb/data/copyright</src>
-                                    <type>file</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/usr/share/doc/opensearchserver</prefix>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${basedir}/src/deb/etc/opensearchserver</src>
-                                    <type>file</type>
-                                    <conffile>true</conffile>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/etc</prefix>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <src>${basedir}/src/deb/init.d</src>
-                                    <type>directory</type>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/etc/init.d</prefix>
-                                        <filemode>755</filemode>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <type>template</type>
-                                    <paths>
-                                        <path>/var/lib/${project.artifactId}/data</path>
-                                        <path>/var/log/${project.artifactId}</path>
-                                        <path>/var/run/${project.artifactId}</path>
-                                    </paths>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <user>opensearchserver</user>
-                                        <group>daemon</group>
-                                    </mapper>
-                                </data>
-                                <data>
-                                    <type>link</type>
-                                    <symlink>true</symlink>
-                                    <linkName>/var/lib/${project.artifactId}/data/logs</linkName>
-                                    <linkTarget>/var/log/${project.artifactId}</linkTarget>
-                                </data>
-                            </dataSet>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>rpm-maven-plugin</artifactId>
-                <version>2.1.5</version>
-                <configuration>
-                    <license>GPLv3 (c) 2008-2016, Jaeksoft SARL</license>
-                    <group>Application/Internet</group>
-                    <packager>OpenSearchServer</packager>
-                    <version>
-                        ${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}
-                    </version>
-                    <prefix>/usr/local</prefix>
-                    <mappings>
-                        <mapping>
-                            <directory>/usr/share/opensearchserver</directory>
-                            <username>opensearchserver</username>
-                            <groupname>daemon</groupname>
-                            <sources>
-                                <source>
-                                    <location>${project.build.directory}/${project.build.finalName}.jar</location>
-                                    <destination>opensearchserver.jar</destination>
-                                </source>
-                                <source>
-                                    <location>${project.build.directory}/${project.build.finalName}.war</location>
-                                    <destination>
-                                        opensearchserver.war
-                                    </destination>
-                                </source>
-                                <source>
-                                    <location>src/deb/init.d/opensearchserver</location>
-                                </source>
-                            </sources>
-                        </mapping>
-                        <mapping>
-                            <directory>/etc</directory>
-                            <directoryIncluded>false</directoryIncluded>
-                            <configuration>true</configuration>
-                            <sources>
-                                <source>
-                                    <location>src/deb/etc/opensearchserver</location>
-                                </source>
-                            </sources>
-                        </mapping>
-                        <mapping>
-                            <directory>/var/log/opensearchserver</directory>
-                            <username>opensearchserver</username>
-                        </mapping>
-                        <mapping>
-                            <directory>/var/lib/opensearchserver</directory>
-                            <username>opensearchserver</username>
-                        </mapping>
-                        <mapping>
-                            <directory>/var/lib/opensearchserver/data</directory>
-                            <username>opensearchserver</username>
-                        </mapping>
-                        <mapping>
-                            <directory>/var/lib/opensearchserver/data/logs</directory>
-                            <username>opensearchserver</username>
-                            <sources>
-                                <softlinkSource>
-                                    <location>/var/log/opensearchserver</location>
-                                </softlinkSource>
-                            </sources>
-                        </mapping>
-                    </mappings>
-                    <requires>
-                        <require>java &gt;= 1.7.0</require>
-                    </requires>
-                    <preinstallScriptlet>
-                        <scriptFile>src/rpm/preinst</scriptFile>
-                    </preinstallScriptlet>
-                    <postinstallScriptlet>
-                        <scriptFile>src/rpm/postinst</scriptFile>
-                    </postinstallScriptlet>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
@@ -1013,6 +851,180 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>debrpm</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>jdeb</artifactId>
+                        <groupId>org.vafer</groupId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jdeb</goal>
+                                </goals>
+                                <configuration>
+                                    <deb>${project.build.directory}/${project.build.finalName}.deb</deb>
+                                    <controlDir>${basedir}/src/deb/control</controlDir>
+                                    <dataSet>
+                                        <data>
+                                            <src>${project.build.directory}/${project.build.finalName}.jar</src>
+                                            <dst>opensearchserver.jar</dst>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/usr/share/opensearchserver</prefix>
+                                                <user>daemon</user>
+                                                <group>daemon</group>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>${project.build.directory}/${project.build.finalName}.war</src>
+                                            <dst>opensearchserver.war</dst>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/usr/share/opensearchserver</prefix>
+                                                <user>daemon</user>
+                                                <group>daemon</group>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>${basedir}/src/deb/data/copyright</src>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/usr/share/doc/opensearchserver</prefix>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>${basedir}/src/deb/etc/opensearchserver</src>
+                                            <type>file</type>
+                                            <conffile>true</conffile>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/etc</prefix>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>${basedir}/src/deb/init.d</src>
+                                            <type>directory</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/etc/init.d</prefix>
+                                                <filemode>755</filemode>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <type>template</type>
+                                            <paths>
+                                                <path>/var/lib/${project.artifactId}/data</path>
+                                                <path>/var/log/${project.artifactId}</path>
+                                                <path>/var/run/${project.artifactId}</path>
+                                            </paths>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <user>opensearchserver</user>
+                                                <group>daemon</group>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <type>link</type>
+                                            <symlink>true</symlink>
+                                            <linkName>/var/lib/${project.artifactId}/data/logs</linkName>
+                                            <linkTarget>/var/log/${project.artifactId}</linkTarget>
+                                        </data>
+                                    </dataSet>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>rpm-maven-plugin</artifactId>
+                        <version>2.1.5</version>
+                        <configuration>
+                            <license>GPLv3 (c) 2008-2016, Jaeksoft SARL</license>
+                            <group>Application/Internet</group>
+                            <packager>OpenSearchServer</packager>
+                            <version>
+                                ${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}
+                            </version>
+                            <prefix>/usr/local</prefix>
+                            <mappings>
+                                <mapping>
+                                    <directory>/usr/share/opensearchserver</directory>
+                                    <username>opensearchserver</username>
+                                    <groupname>daemon</groupname>
+                                    <sources>
+                                        <source>
+                                            <location>${project.build.directory}/${project.build.finalName}.jar
+                                            </location>
+                                            <destination>opensearchserver.jar</destination>
+                                        </source>
+                                        <source>
+                                            <location>${project.build.directory}/${project.build.finalName}.war
+                                            </location>
+                                            <destination>
+                                                opensearchserver.war
+                                            </destination>
+                                        </source>
+                                        <source>
+                                            <location>src/deb/init.d/opensearchserver</location>
+                                        </source>
+                                    </sources>
+                                </mapping>
+                                <mapping>
+                                    <directory>/etc</directory>
+                                    <directoryIncluded>false</directoryIncluded>
+                                    <configuration>true</configuration>
+                                    <sources>
+                                        <source>
+                                            <location>src/deb/etc/opensearchserver</location>
+                                        </source>
+                                    </sources>
+                                </mapping>
+                                <mapping>
+                                    <directory>/var/log/opensearchserver</directory>
+                                    <username>opensearchserver</username>
+                                </mapping>
+                                <mapping>
+                                    <directory>/var/lib/opensearchserver</directory>
+                                    <username>opensearchserver</username>
+                                </mapping>
+                                <mapping>
+                                    <directory>/var/lib/opensearchserver/data</directory>
+                                    <username>opensearchserver</username>
+                                </mapping>
+                                <mapping>
+                                    <directory>/var/lib/opensearchserver/data/logs</directory>
+                                    <username>opensearchserver</username>
+                                    <sources>
+                                        <softlinkSource>
+                                            <location>/var/log/opensearchserver</location>
+                                        </softlinkSource>
+                                    </sources>
+                                </mapping>
+                            </mappings>
+                            <requires>
+                                <require>java &gt;= 1.7.0</require>
+                            </requires>
+                            <preinstallScriptlet>
+                                <scriptFile>src/rpm/preinst</scriptFile>
+                            </preinstallScriptlet>
+                            <postinstallScriptlet>
+                                <scriptFile>src/rpm/postinst</scriptFile>
+                            </postinstallScriptlet>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <distributionManagement>
         <snapshotRepository>
