--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.6.2</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -77,7 +77,7 @@
             <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
-                <version>1.8.3</version>
+                <version>1.9.3</version>
             </dependency>
             <dependency>
                 <artifactId>commons-codec</artifactId>
@@ -145,9 +145,14 @@
                 <version>1.13</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.5</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpasyncclient</artifactId>
-                <version>4.1.2</version>
+                <version>4.1.3</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -163,6 +168,11 @@
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpcore-nio</artifactId>
                 <version>${httpcore.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpmime</artifactId>
+                <version>${httpclient.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.jena</groupId>
@@ -232,7 +242,7 @@
             <dependency>
                 <groupId>commons-digester</groupId>
                 <artifactId>commons-digester</artifactId>
-                <version>1.8.1</version>
+                <version>2.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -343,17 +353,17 @@
         <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
-            <version>7.0.12</version>
+            <version>7.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.6.2</version>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>com.ibm.icu</groupId>
             <artifactId>icu4j</artifactId>
-            <version>57.1</version>
+            <version>59.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.api.client</groupId>
@@ -413,12 +423,12 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.4</version>
+            <version>3.5</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.htmlcleaner</groupId>
             <artifactId>htmlcleaner</artifactId>
-            <version>2.16</version>
+            <version>2.20</version>
         </dependency>
         <dependency>
             <groupId>org.imgscalr</groupId>
@@ -443,7 +453,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpasyncclient</artifactId>
-            <version>4.1.2</version>
+            <version>4.1.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
@@ -691,7 +701,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.10</version>
+            <version>2.4.11</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -701,7 +711,7 @@
         <dependency>
             <groupId>net.sf.jmimemagic</groupId>
             <artifactId>jmimemagic</artifactId>
-            <version>0.1.4</version>
+            <version>0.1.5</version>
         </dependency>
         <dependency>
             <groupId>com.atlascopco</groupId>
@@ -711,12 +721,12 @@
         <dependency>
             <groupId>org.roaringbitmap</groupId>
             <artifactId>RoaringBitmap</artifactId>
-            <version>0.6.41</version>
+            <version>0.6.44</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.39</version>
+            <version>5.1.41</version>
         </dependency>
         <dependency>
             <groupId>com.jaeksoft</groupId>
@@ -731,12 +741,12 @@
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
-            <version>2.3.4</version>
+            <version>2.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.12.1.1</version>
+            <version>10.13.1.1</version>
         </dependency>
         <dependency>
             <groupId>com.ingres.jdbc</groupId>
@@ -751,7 +761,7 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.8.11.2</version>
+            <version>3.16.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.jankroken</groupId>
@@ -764,14 +774,14 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <cxf.version>2.7.18</cxf.version>
         <lucene.version>3.6.2</lucene.version>
-        <httpclient.version>4.5.2</httpclient.version>
-        <httpcore.version>4.4.5</httpcore.version>
+        <httpclient.version>4.5.3</httpclient.version>
+        <httpcore.version>4.4.6</httpcore.version>
         <poi.version>3.14</poi.version>
         <selenium.version>2.53.1</selenium.version>
         <zk.version>6.5.4</zk.version>
         <jackson1.version>1.9.13</jackson1.version>
         <jackson.version>2.6.7</jackson.version>
-        <tomcat.version>7.0.76</tomcat.version>
+        <tomcat.version>7.0.77</tomcat.version>
         <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
